kubernetes/hetzner-personal/gateway/cluster-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: cert-manager
spec:
  addresses:
    - value: "88.99.186.204"
    - value: "2a01:4f8:1c1c:adcf::1"
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
